# ScheduFast

./: .gitignore  README.md  converted_timetable.xlsx  delete_events.py  eventcreate.py  pdftoexcel.py  pdftoexceltest.py  sheet_split.py  tempCodeRunnerFile.py  test.py  timetable.xlsx  timetable_converted.xlsx  timetableparse.py
.github/workflows/: ping.yaml
schedufast/: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  yesterday_notes.txt
schedufast/.github/workflows/: ping.yaml
schedufast/backend/: main.py  requirements.txt  timetable_events.json  utils.py
schedufast/backend/app/services/ai/: ai_parser.py
schedufast/backend/app/services/google/: delete_events.py  eventcreate.py  new_event_create.py
schedufast/backend/app/services/pdf/: format_csv.py  pdftoexcel.py  sheet_split.py  timetableparse.py  xl_to_csv.py
schedufast/frontend/: package-lock.json  package.json  vite.config.js
schedufast/frontend/src/: index.html  script.js  signup.html  signup.js  style.css  supabase.js
